--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: kernel
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
 Uploaders: M.Angel Juan <m.angel.juan@gmail.com>, Raul Rodrigo Segura <lliurex_devel3@edu.gva.es>, Hector Garcia Huerta <lliurex_devel1@edu.gva.es>, Daniel Duran Vecino <daduve@gmail.com>, Juanma Navarro <juanma1980@gmail.com>, Juan Ramon Pelegrina <juapesai@hotmail.com>, Enrique Medina Gremaldos <lliurex_devel4@edu.gva.es>
-Build-Depends: cdbs, debhelper (>= 7), mrpdi-dev (>=2.2), pkg-config, libusb-1.0-0-dev
+Build-Depends: debhelper (>= 7), mrpdi-dev (>=2.2), pkg-config, libusb-1.0-0-dev
 Standards-Version: 4.1.4
 Homepage: http://lliurex.net
  
